Product Banefit Changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,5 @@
       <p>Congratulations! Your app is running. 🎉</p>
       <p>This is my {{Count}} app 🎉</p>
  <app-new-component></app-new-component>  
+ <app-productspecifics></app-productspecifics>  
+ 
