--- a/src/app/new-component/new-component.component.css
+++ b/src/app/new-component/new-component.component.css
@@ -2,8 +2,8 @@
     .container {
         width: 80%;
         margin: 0 auto;
-        padding: 20px;
-        background-color: #f9f9f9;
+        padding: 7px;
+        background-color: #0c99f0;
         border-radius: 8px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
@@ -11,7 +11,7 @@
     .title {
         text-align: center;
         font-size: 2em;
-        color: #ef6a17;
+        color: #b1d60b;
         margin-bottom: 20px;
     }
 
